[package]
name = "provcheck-wavmark"
description = "WavMark neural-watermark detection for provcheck."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "provcheck_wavmark"

[dependencies]
provcheck = { path = "../provcheck" }
provcheck-weights = { path = "../provcheck-weights" }
thiserror.workspace = true

# ONNX inference. WavMark ships as two ONNX models (HiNet forward +
# reverse passes) embedded via include_bytes!() at build time. Exported
# from M4869/WavMark's MIT-licensed checkpoint via scripts/export-wavmark.py.
tract-onnx = "0.21"

# Audio container decoding (16 kHz mono — WavMark's training rate).
symphonia = { version = "0.6", features = ["mp3", "aac", "flac", "isomp4", "ogg", "vorbis", "wav"] }
rubato = "0.16"

# Real-input FFT for STFT/iSTFT. WavMark's STFT (n_fft=1000, hop=400,
# Hann, center=True) has to live on the Rust side because tract-onnx
# 0.21 doesn't support PyTorch's `return_complex=True` op signature.
realfft = "3"

# Parallel chunk inference.
rayon = "1"

# WAV output for the embed pipeline.
hound = "3"

[dev-dependencies]
# Cross-crate parity invariant on the brand-registry layout.
provcheck-audioseal = { path = "../provcheck-audioseal" }
tempfile = "3"
anyhow = "1"
