[package]
name = "provcheck-weights"
description = "DLC-style downloadable detector weights — manifest, download, verify, cache."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "provcheck_weights"

[dependencies]
thiserror.workspace = true
# Cache dir resolution per OS (cache_dir, data_dir, etc.).
# Same crate provcheck-platform already pulls in for attestation
# storage, so no new transitive surface.
dirs = "6"
# SHA256 for download verification against the bundled manifest.
sha2 = "0.10"
# Blocking HTTPS downloader. Picked over reqwest because: no tokio
# dependency (this crate runs in sync detect paths), TLS is via
# webpki-roots so we do not pull native-tls (and its OS-specific
# build deps), and the API surface fits the load_or_download
# pattern in <100 lines.
ureq = { version = "2.10", default-features = false, features = ["tls"] }

[dev-dependencies]
tempfile = "3"
